[gd_scene load_steps=14 format=2]

[ext_resource path="res://resources/transitions/imagem 3- minigame golfe.png" type="Texture" id=1]
[ext_resource path="res://sources/common/shaders/PixelPerfect.gdshader" type="Shader" id=2]
[ext_resource path="res://resources/transitions/personagem imagem 2.png" type="Texture" id=3]
[ext_resource path="res://resources/transitions/talk_cloud.png" type="Texture" id=4]
[ext_resource path="res://resources/fonts/VillainTeamUpSpiked-2Ov5e.otf" type="DynamicFontData" id=5]
[ext_resource path="res://sources/game/transitions/TigerWoodGolfTalk.gd" type="Script" id=6]
[ext_resource path="res://resources/transitions/empty.png" type="Texture" id=7]
[ext_resource path="res://resources/transitions/talk_cloud_straigth.png" type="Texture" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 2
outline_color = Color( 0.768627, 0.768627, 0.768627, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 26
outline_size = 2
outline_color = Color( 0.768627, 0.768627, 0.768627, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="TigerWoodGolfTalk" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTexture" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TigerWoodTexture" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -228.0
margin_top = 729.0
margin_right = -225.0
margin_bottom = 172.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersonTalk" type="Control" parent="."]
visible = false
margin_left = 75.0
margin_top = 232.0
margin_right = 115.0
margin_bottom = 272.0
rect_scale = Vector2( 1.4, 1.4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TalkCloudTexture" type="TextureRect" parent="PersonTalk"]
material = SubResource( 2 )
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 68.0
margin_right = 340.0
margin_bottom = 688.0
texture = ExtResource( 4 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkLabel" type="Label" parent="PersonTalk"]
anchor_left = 0.5
anchor_top = 4.299
anchor_right = 8.51
anchor_bottom = 9.344
margin_left = -1.0
margin_top = 21.04
margin_right = 0.599976
margin_bottom = 22.24
custom_colors/font_color = Color( 0, 0.00392157, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelfTalk" type="Control" parent="."]
visible = false
margin_left = 297.0
margin_top = 690.0
margin_right = 337.0
margin_bottom = 730.0
rect_scale = Vector2( 1.3, 1.3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TalkCloudTexture" type="TextureRect" parent="SelfTalk"]
modulate = Color( 0.352941, 0.752941, 0.94902, 1 )
material = SubResource( 4 )
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.64
margin_top = 129.443
margin_right = 409.36
margin_bottom = 627.443
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TalkLabel" type="Label" parent="SelfTalk"]
anchor_left = 1.0
anchor_top = 5.741
anchor_right = 7.42
anchor_bottom = 9.766
margin_left = 6.0
margin_top = 1.35999
margin_right = -7.80002
margin_bottom = -0.640015
custom_colors/font_color = Color( 0, 0.00392157, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickAreas" type="Node2D" parent="."]

[node name="NextTalk" type="TouchScreenButton" parent="ClickAreas"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 41.9999, 44 )
scale = Vector2( 2.45178, 4.64446 )
normal = ExtResource( 7 )
pressed = ExtResource( 7 )

[node name="GenericTimer" type="Timer" parent="."]

[connection signal="pressed" from="ClickAreas/NextTalk" to="." method="_on_NextTalk_pressed"]
